
7.62  2018-02-01
  - Added -u option to get command. (jberger)
  - Added dont_use_nlink option to list_tree method in Mojo::File.
  - Fixed a promise resolution bug in Mojo::Promise.

7.61  2018-01-08
  - Increased default upgrade_timeout from 60 to 180 seconds in
    Mojo::Server::Hypnotoad.

7.60  2018-01-02
  - Deprecated use of Mojo::Promise::all and Mojo::Promise::race as instance
    methods.
  - Improved all and race methods in Mojo::Promise to be able to handle
    arbitrary then-ables.
  - Improved number detection in Mojo::JSON with a workaround for an upcoming
    breaking change in Perl 5.28. (haarg)
  - Improved HTML Living Standard compliance of Mojo::DOM::HTML.
  - Fixed a bug in Mojo::Base that prevented composition of multiple roles.
    (aferreira, batman)
  - Fixed a bug in Mojolicious::Static where text files from DATA sections would
    not be UTF-8 encoded. (Grinnz)

7.59  2017-12-15
  - Moved home and ua attributes from Mojo to Mojolicious.
  - Changed Mojo::IOLoop::Client to only start a thread pool with
    Net::DNS::Native on demand. (Grinnz)
  - Improved subprocess method in Mojo::IOLoop to allow for easier role
    composition.
  - Fixed RFC 7230 compliance bug in Mojo::Message::Response. (jberger)

7.58  2017-12-02
  - Added websocket_p method to Mojo::UserAgent.

7.57  2017-11-18
  - Fixed installation problems with some versions of Perl on Windows.

7.56  2017-11-14
  - Added num check to Mojolicious::Validator.
  - Improved built-in templates with high resolution logos.

7.55  2017-11-06
  - Added -role flag to Mojo::Base. (jberger)
  - Improved tablify function in Mojo::Util to work with non-rectangular arrays.
    (CandyAngel, jabberwok)
  - Improved Windows compatibility of Mojo::Server::Daemon.

7.54  2017-11-05
  - Fixed a bug in Mojo::Promise where promise chains could not recover from
    rejections.

7.53  2017-11-04
  - Added module Mojo::Promise.
  - Improved Mojo::IOLoop::Delay to be a subclass of Mojo::Promise.
